# Smart-Spreadsheet

./: .gitignore  README.md  enums.py  main.py  pyproject.toml  utils.py
auto_parser/: __init__.py  functions.py
border_parser/: __init__.py  functions.py
cli/: auto_command.py  border_command.py  main_service.py  manual_command.py
llms/: __init__.py  bamboo.py  openai.py  utils.py
manual_parser/: __init__.py  functions.py  types.py
