[tool.poetry]
name = "smart-spreadsheet"
version = "0.1.0"
description = "An app that can read and process a spreadsheet, answering question about it"
authors = ["Fabio Kubo <fabio_harada@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.33.0"
et-xmlfile = "1.1.0"
openpyxl = "3.1.2"
pandasai = {extras = ["excel"], version = "^2.1.1"}
pyyaml = "^6.0.1"
typer = "^0.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
