[tool.poetry]
name = "smart-spreadsheet"
version = "0.1.0"
description = "An app that can read and process a spreadsheet, answering question about it"
authors = ["Fabio Kubo <fabio_harada@hotmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.33.0"
et-xmlfile = "1.1.0"
openpyxl = "3.1.2"
pandasai = {extras = ["excel"], version = "^2.1.1"}
pyyaml = "^6.0.1"
typer = "^0.12.3"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
